--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "bootstrap": "~3.2.0",
     "leaflet": "~0.7.3",
     "famous": "~0.2.2",
-    "bootstrap-datepicker": "~1.3.0"
+    "bootstrap-datepicker": "~1.3.0",
+    "tooltipster": "~3.2.6"
   }
 }
