--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootable-environment": "0.2.x",
     "express": "3.x.x",
     "connect-powered-by": "0.1.x",
-    "ejs": "0.8.x"
+    "ejs": "0.8.x",
+    "at-at": "latest"
   },
   "scripts": {
     "start": "node server.js"
