Took out my components and put them in their own repo.
Better System.import error handling.

--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "locomotive": "0.4.x",
+    "at-at": "latest",
     "bootable": "0.2.x",
     "bootable-environment": "0.2.x",
-    "express": "3.x.x",
     "connect-powered-by": "0.1.x",
     "ejs": "0.8.x",
-    "at-at": "latest"
+    "express": "3.x.x",
+    "jspm": "^0.8.1",
+    "jspm-git": "^0.2.0",
+    "locomotive": "0.4.x",
+    "tilde-expansion": "0.0.0"
   },
   "scripts": {
     "start": "node server.js"
