--- a/public/package.json
+++ b/public/package.json
@@ -1,1 +1,28 @@
-jspm.json
+{
+    "name": "trusktr.io",
+    "version": "0.0.0",
+    "dependencies": {
+        "army-knife": "^0.2.1",
+        "async": "^0.9.0",
+        "big": "MikeMcl/big.js#2.5.1",
+        "bignumber": "MikeMcl/bignumber.js#1.4.1",
+        "bootstrap": "twbs/bootstrap#3.2.0",
+        "bootstrap-datepicker": "eternicode/bootstrap-datepicker#1.3.0",
+        "famous": "trusktr/famous#jspm",
+        "infamous": "^0.0.40",
+        "james-bond": "^0.0.0",
+        "jquery": "components/jquery#2.1.1",
+        "jquery-tooltipster": "iamceege/tooltipster#3.2.6",
+        "jsfromhell": "jonasraoni/JSFromHell#master",
+        "jss": "^0.10.1",
+        "jss-nested": "^0.1.4",
+        "leaflet": "RickMohr/Leaflet#better-inertial-scrolling",
+        "operative": "^0.3.2",
+        "string": "^3.0.0"
+    },
+    "devDependencies": {
+        "babel": "^5.8.24",
+        "babel-runtime": "^5.8.24",
+        "core-js": "^1.1.4"
+    }
+}
