--- a/public/package.json
+++ b/public/package.json
@@ -4,19 +4,19 @@
     "dependencies": {
         "army-knife": "^0.2.1",
         "async": "^0.9.0",
-        "big": "MikeMcl/big.js#2.5.1",
-        "bignumber": "MikeMcl/bignumber.js#1.4.1",
-        "bootstrap": "twbs/bootstrap#3.2.0",
-        "bootstrap-datepicker": "eternicode/bootstrap-datepicker#1.3.0",
-        "famous": "trusktr/famous#jspm",
+        "big.js": "2.5.1",
+        "bignumber.js": "1.4.1",
+        "bootstrap": "3.2.0",
+        "bootstrap-datepicker": "1.4.0",
+        "famous": "git+https://github.com/trusktr/famous.git#trusktr",
         "infamous": "^0.0.40",
         "james-bond": "^0.0.0",
-        "jquery": "components/jquery#2.1.1",
-        "jquery-tooltipster": "iamceege/tooltipster#3.2.6",
-        "jsfromhell": "jonasraoni/JSFromHell#master",
+        "jquery": "2.1.1",
+        "jquery-tooltipster": "git+https://github.com/trusktr/tooltipster.git#npm",
+        "jsfromhell": "git+https://github.com/trusktr/JSFromHell.git#npm",
         "jss": "^0.10.1",
         "jss-nested": "^0.1.4",
-        "leaflet": "RickMohr/Leaflet#better-inertial-scrolling",
+        "leaflet": "git+https://github.com/RickMohr/Leaflet.git#better-inertial-scrolling",
         "operative": "^0.3.2",
         "string": "^3.0.0"
     },
