Removed rocket:module and moved entry.js to main.js, to be treted as a Meteor 1.3 module. It works now, with my Famous 0.3 fork converted to CommonJS!

--- a/public/.src/package.json
+++ b/public/.src/package.json
@@ -8,8 +8,8 @@
         "bignumber.js": "1.4.1",
         "bootstrap": "3.2.0",
         "bootstrap-datepicker": "1.4.0",
-        "famous": "git+https://github.com/trusktr/famous.git#trusktr",
-        "infamous": "^0.1.0",
+        "famous": "trusktr/famous#commonjs",
+        "infamous": "infamous/infamous#dev",
         "james-bond": "^0.0.0",
         "jquery": "2.1.1",
         "jquery-tooltipster": "git+https://github.com/trusktr/tooltipster.git#npm",
