--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
     "dependencies": {
         "army-knife": "^0.2.1",
 
-        "infamous": "^2.0.0",
+        "infamous": "^3.0.0",
         "jquery": "^2.1.1",
-        "jss": "^2.1.5",
-        "jss-nested": "^0.1.8",
+
+        "jss": "^3.0.0",
+        "jss-camel-case": "^1.0.0",
+        "jss-extend": "^1.0.0",
+        "jss-nested": "^1.0.0",
+        "jss-props-sort": "^1.0.0",
+        "jss-px": "^1.0.0",
+        "jss-vendor-prefixer": "^1.0.0",
 
         "react": "^0.13.0",
         "react-mixin": "^1.7.0"
