--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "jss-vendor-prefixer": "^1.0.0",
 
         "react": "^0.13.0",
-        "react-mixin": "^1.7.0"
+        "react-mixin": "^1.7.0",
+
+        "raf-timeout": "^1.0.0"
     }
 }
