--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
     "version": "0.0.0",
     "dependencies": {
         "army-knife": "^0.2.1",
+        "awaitbox": "^1.0.0",
 
-        "infamous": "^5.0.0",
+        "infamous": "^5.2.0",
         "jquery": "^2.1.1",
 
         "jss": "^3.0.0",
