--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,7 @@
         "bignumber.js": "1.4.1",
         "bootstrap": "3.2.0",
         "bootstrap-datepicker": "1.4.0",
-        "famous": "trusktr/famous#commonjs",
+        "famous": "trusktr/famous#trusktr",
         "infamous": "^0.1.0",
         "james-bond": "^0.0.0",
         "jquery": "2.1.1",
