--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -1,13 +1,16 @@
 {
   "name": "trusktr.io",
-  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "meteor run"
+  },
   "dependencies": {
     "army-knife": "^0.2.1",
     "async-csp": "^0.5.0",
     "awaitbox": "^1.0.0",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
     "famous": "trusktr/famous#commonjs",
-    "infamous": "^9.1.4",
+    "infamous": "^11.0.3",
     "jquery": "^2.1.1",
     "jss": "^3.0.0",
     "jss-camel-case": "^1.0.0",
@@ -16,6 +19,7 @@
     "jss-props-sort": "^1.0.0",
     "jss-px": "^1.0.0",
     "jss-vendor-prefixer": "^1.0.0",
+    "meteor-node-stubs": "~0.2.0",
     "raf-timeout": "^1.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
