--- a/src/package.json
+++ b/src/package.json
@@ -1,46 +1,41 @@
 {
-    "name": "trusktr.io",
-    "version": "0.0.0",
-    "dependencies": {
-        "army-knife": "^0.2.1",
-        "async": "^0.9.0",
-        "big.js": "2.5.1",
-        "bignumber.js": "1.4.1",
-        "bootstrap": "3.2.0",
-        "bootstrap-datepicker": "1.4.0",
-        "famous": "trusktr/famous#trusktr",
-        "infamous": "^0.1.0",
-        "james-bond": "^0.0.0",
-        "jquery": "2.1.1",
-        "jquery-tooltipster": "trusktr/tooltipster#npm",
-        "jsfromhell": "trusktr/JSFromHell#npm",
-        "jss": "^0.10.1",
-        "jss-nested": "^0.1.4",
-        "leaflet": "^0.7.7",
-        "operative": "^0.3.2",
-        "string": "^3.0.0"
-    },
-    "devDependencies": {
-        "webpack": "^1.12.3",
-        "regenerator": "^0.8.0",
-
-        "babel-core": "6.1.21",
-        "babel-loader": "^6.0.0",
-        "babel-polyfill": "^6.0.0",
-
-        "babel-preset-es2015": "^6.0.0",
-        "babel-preset-react": "^6.0.0",
-
-        "raw-loader": "^0.5.0",
-        "glslify-loader": "^1.0.2",
-
-        "css-loader": "^0.22.0",
-        "style-loader": "^0.13.0",
-
-        "url-loader": "^0.5.6",
-        "file-loader": "^0.8.4"
-    },
-    "scripts": {
-      "build": "npm install && webpack"
-    }
+  "name": "trusktr.io",
+  "version": "0.0.0",
+  "dependencies": {
+    "army-knife": "^0.2.1",
+    "async": "^0.9.0",
+    "big.js": "2.5.1",
+    "bignumber.js": "1.4.1",
+    "bootstrap": "3.2.0",
+    "bootstrap-datepicker": "1.4.0",
+    "famous": "trusktr/famous#trusktr",
+    "infamous": "^0.1.0",
+    "james-bond": "^0.0.0",
+    "jquery": "2.1.1",
+    "jquery-tooltipster": "trusktr/tooltipster#npm",
+    "jsfromhell": "trusktr/JSFromHell#npm",
+    "jss": "^6.5.0",
+    "jss-preset-default": "^1.3.1",
+    "leaflet": "^0.7.7",
+    "operative": "^0.3.2",
+    "string": "^3.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^1.12.3",
+    "regenerator": "^0.8.0",
+    "babel-core": "6.1.21",
+    "babel-loader": "^6.0.0",
+    "babel-polyfill": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-react": "^6.0.0",
+    "raw-loader": "^0.5.0",
+    "glslify-loader": "^1.0.2",
+    "css-loader": "^0.22.0",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "file-loader": "^0.8.4"
+  },
+  "scripts": {
+    "build": "npm install && webpack"
+  }
 }
