--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -10,7 +10,7 @@
     "awaitbox": "^1.0.0",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
     "famous": "trusktr/famous#commonjs",
-    "infamous": "^11.0.3",
+    "infamous": "^16.0.2",
     "jquery": "^2.1.1",
     "jss": "^3.0.0",
     "jss-camel-case": "^1.0.0",
@@ -19,6 +19,7 @@
     "jss-props-sort": "^1.0.0",
     "jss-px": "^1.0.0",
     "jss-vendor-prefixer": "^1.0.0",
+    "leaflet": "^0.7.7",
     "meteor-node-stubs": "~0.2.0",
     "raf-timeout": "^1.0.0",
     "react": "^15.0.0",
