Moved stuff to imports folder, made two versions of triangles demo, one with react and one with web components.

--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -24,6 +24,7 @@
     "raf-timeout": "^1.0.0",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
+    "tinycolor2": "^1.4.1",
     "webcomponents.js": "webcomponents/webcomponentsjs#v1"
   }
 }
