--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -8,6 +8,7 @@
     "army-knife": "^0.2.1",
     "async-csp": "^0.5.0",
     "awaitbox": "^1.0.0",
+    "babel-runtime": "^6.23.0",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
     "famous": "trusktr/famous#commonjs",
     "infamous": "^16.0.3",
