update node modules, including infamous to get rid of an error

--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -5,27 +5,28 @@
     "start": "meteor run"
   },
   "dependencies": {
-    "army-knife": "^0.2.1",
+    "army-knife": "^0.2.3",
     "async-csp": "^0.5.0",
-    "awaitbox": "^1.0.0",
+    "awaitbox": "^1.1.1",
     "babel-runtime": "^6.23.0",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
     "famous": "trusktr/famous#commonjs",
-    "infamous": "^16.0.3",
+    "infamous": "^16.0.6",
     "jquery": "^2.1.1",
-    "jss": "^3.0.0",
-    "jss-camel-case": "^1.0.0",
-    "jss-extend": "^1.0.0",
-    "jss-nested": "^1.0.0",
-    "jss-props-sort": "^1.0.0",
+    "jss": "^3.11.1",
+    "jss-camel-case": "^1.1.0",
+    "jss-extend": "^1.2.1",
+    "jss-nested": "^1.0.3",
+    "jss-props-sort": "^1.0.2",
     "jss-px": "^1.0.0",
-    "jss-vendor-prefixer": "^1.0.0",
+    "jss-vendor-prefixer": "^1.0.1",
     "leaflet": "^0.7.7",
-    "meteor-node-stubs": "~0.2.0",
+    "meteor-node-stubs": "~0.2.4",
     "raf-timeout": "^1.0.0",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "tinycolor2": "^1.4.1",
+    "tween.js": "^16.6.0",
     "webcomponents.js": "webcomponents/webcomponentsjs#v1"
   }
 }
