Add -- to npm script so it can accept args from npm start

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "npm run build-src && npm run meteor",
+    "start": "npm run build-src && npm run meteor --",
     "meteor": "cd meteor-app && npm i && meteor",
     "build-src": "cd src && npm run build"
   }
