--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -9,9 +9,10 @@
     "async-csp": "^0.5.0",
     "awaitbox": "^1.1.1",
     "babel-runtime": "^6.23.0",
+    "csg": "^1.0.1",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
     "famous": "trusktr/famous#commonjs",
-    "infamous": "^16.0.6",
+    "infamous": "trusktr/infamous#webgl",
     "jquery": "^2.1.1",
     "jss": "^3.11.1",
     "jss-camel-case": "^1.1.0",
