--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -2,7 +2,8 @@
   "name": "trusktr.io",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "postinstall": "cd node_modules/infamous && npm i && npm run build-cjs "
   },
   "dependencies": {
     "army-knife": "^0.2.3",
