--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -13,7 +13,7 @@
     "csg": "^1.0.1",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
     "famous": "trusktr/famous#commonjs",
-    "infamous": "trusktr/infamous#webgl",
+    "infamous": "trusktr/infamous#master",
     "jquery": "^2.1.1",
     "jss": "^3.11.1",
     "jss-camel-case": "^1.1.0",
