add jquery/PEP and use pointer events

--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -12,7 +12,7 @@
     "babel-runtime": "^6.23.0",
     "csg": "^1.0.1",
     "document-register-element": "WebReflection/document-register-element#0.6.1",
-    "infamous": "trusktr/infamous#master",
+    "infamous": "github:trusktr/infamous#master",
     "jquery": "^2.1.1",
     "jss": "^3.11.1",
     "jss-camel-case": "^1.1.0",
@@ -23,6 +23,7 @@
     "jss-vendor-prefixer": "^1.0.1",
     "leaflet": "^0.7.7",
     "meteor-node-stubs": "~0.2.4",
+    "pepjs": "^0.4.3",
     "raf-timeout": "^1.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
