--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "trusktr+chat-widget",
+  "name": "chat-widget",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
+    "@awaitbox/meteor-startup": "^1.0.4",
     "babel-runtime": "^6.26.0",
-    "meteor-node-stubs": "^0.3.2"
-  }
+    "buffer": "^5.0.8",
+    "meteor-node-stubs": "^0.3.2",
+    "vue": "^2.5.13",
+    "vue-meteor-tracker": "^1.2.3",
+    "vue-router": "^3.0.1"
+  },
+  "devDependencies": {}
 }
