--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "postinstall": "cd node_modules/infamous && npm i && npm run build-cjs "
+    "postinstall -- disabled, needed when installing infamous from git": "cd node_modules/infamous && npm i && npm run build-cjs "
   },
   "dependencies": {
     "army-knife": "^0.2.3",
@@ -12,7 +12,7 @@
     "babel-runtime": "^6.23.0",
     "csg": "^1.0.1",
     "document-register-element": "WebReflection/document-register-element#v1.7.0",
-    "infamous": "trusktr/infamous#master",
+    "infamous": "^18.0.5",
     "jquery": "^2.1.1",
     "jss": "^3.11.1",
     "jss-camel-case": "^1.1.0",
