--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -6,12 +6,12 @@
     "postinstall -- disabled, needed when installing infamous from git": "cd node_modules/infamous && npm i && npm run build-cjs "
   },
   "dependencies": {
+    "@webcomponents/webcomponentsjs": "^1.0.22",
     "army-knife": "^0.2.3",
     "async-csp": "^0.5.0",
     "awaitbox": "^1.1.1",
     "babel-runtime": "^6.23.0",
     "csg": "^1.0.1",
-    "document-register-element": "WebReflection/document-register-element#v1.7.0",
     "infamous": "^18.0.5",
     "jquery": "^2.1.1",
     "jss": "^3.11.1",
