--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -6,13 +6,14 @@
 		"postinstall -- disabled, needed when installing infamous from git": "cd node_modules/infamous && npm i && npm run build-cjs "
 	},
 	"dependencies": {
+		"@babel/runtime": "^7.5.5",
 		"@webcomponents/webcomponentsjs": "^1.0.22",
 		"army-knife": "^0.2.3",
 		"async-csp": "^0.5.0",
 		"awaitbox": "^1.1.1",
 		"babel-runtime": "^6.23.0",
 		"csg": "^1.0.1",
-		"infamous": "^18.0.7",
+		"infamous": "infamous/infamous#built-develop",
 		"jquery": "^2.1.1",
 		"jss": "^3.11.1",
 		"jss-camel-case": "^1.1.0",
@@ -29,6 +30,7 @@
 		"raf-timeout": "^1.0.0",
 		"react": "^15.6.1",
 		"react-dom": "^15.6.1",
+		"three": "^0.107.0",
 		"tinycolor2": "^1.4.1",
 		"tween.js": "^16.6.0",
 		"vue": "^2.4.4",
