--- a/meteor-app/package.json
+++ b/meteor-app/package.json
@@ -32,6 +32,7 @@
 		"react-dom": "^15.6.1",
 		"tinycolor2": "^1.4.1",
 		"tween.js": "^16.6.0",
+		"uos": "^1.2.0",
 		"vue": "^2.4.4",
 		"vue-meteor-tracker": "^2.0.0-beta.5",
 		"webcomponents.js": "webcomponents/webcomponentsjs#v1",
