--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"scripts": {
-		"start": "npm run build-src && npm run meteor --",
+		"start": "npm run update-submodules && npm run build-src && npm run meteor --",
+        "update-submodules": "git submodule init && git submodule update",
 		"meteor": "cd meteor-app && meteor",
 		"build-src": "cd src && npm run build"
 	}
